<resources>
    <string name="app_name">AppicMobile</string>
    <string name="total_accounts">Total Accounts :</string>
    <string name="total_brands">Total Brands :</string>
    <string name="total_location">Total Locations :</string>
    <string name="select_acc_no">Select Acc No.</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_location">Select Location</string>
</resources>